fixed heart/num spacing

--- a/client/src/components/Comments/Comments.scss
+++ b/client/src/components/Comments/Comments.scss
@@ -88,7 +88,7 @@
 
   .likewrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width: 7rem;
   }
 
